[package]
name = "cm"
version = "0.1.0"
authors = ["Antoine Veenstra <AVeenstra@users.noreply.github.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
common = { path = "../common", default-features = false }
pc-list = { path = "../pc-list", default-features = false }

[dev-dependencies]
lazy_static = "~1.4.0"

[features]
score-single = []
score-double = []
